@@ -136,19 +136,21 @@
 	  (>= (cdr pos) (screen-height)))))
 
   (define (move-window-to-current-viewport window)
-    (when (window-outside-viewport-p window)
+    (when (and (window-outside-viewport-p window)
+	       (not (window-get window 'sticky-viewport)))
       (let ((pos (window-position window)))
 	(move-window-to window (mod (car pos) (screen-width))
 			(mod (cdr pos) (screen-height))))))
 
   (define (set-window-viewport window col row)
-    (let ((pos (window-position window)))
-      (setq col (max 0 (min (1- (car viewport-dimensions)) col)))
-      (setq row (max 0 (min (1- (cdr viewport-dimensions)) row)))
-      (setq col (+ (* col (screen-width)) (mod (car pos) (screen-width))))
-      (setq row (+ (* row (screen-height)) (mod (cdr pos) (screen-height))))
-      (move-window-to
-       window (- col viewport-x-offset) (- row viewport-y-offset))))
+    (unless (window-get window 'sticky-viewport)
+      (let ((pos (window-position window)))
+	(setq col (max 0 (min (1- (car viewport-dimensions)) col)))
+	(setq row (max 0 (min (1- (cdr viewport-dimensions)) row)))
+	(setq col (+ (* col (screen-width)) (mod (car pos) (screen-width))))
+	(setq row (+ (* row (screen-height)) (mod (cdr pos) (screen-height))))
+	(move-window-to
+	 window (- col viewport-x-offset) (- row viewport-y-offset)))))
 
   (define (move-window-viewport window col row)
     (let ((pos (window-position window)))
