@@ -1,5 +1,8 @@
 2000-11-20  John Harper  <jsh@eazel.com>
 
+	* sawfish/wm/viewport.jl (move-window-to-current-viewport,
+	set-window-viewport): don't move sticky-viewport windows
+
 	* sawfish/wm/animation/outline.jl (make-outline-animator): new
 	exported function. Fixes #4816
 
